@@ -1,3 +1,7 @@
 #pragma once
 
+int __stdcall GetMaxCoins();
+int __stdcall GetMaxKeys();
+int __stdcall GetMaxBombs();
+
 void ASMPatchesForCustomCache();
